--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "massmail",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://dev70578.service-now.com",
+  "proxy": "https://devXXXXX.service-now.com",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
